fixed overflow wrap

--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -150,6 +150,7 @@
     font-size: 15px;
     font-weight: 300;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 .event-deets-about {
