--- a/frontend/src/components/GroupDetails/GroupDetails.css
+++ b/frontend/src/components/GroupDetails/GroupDetails.css
@@ -152,6 +152,7 @@
     font-size: 15px;
     font-weight: 300;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 .group-deets-about {
